# data-engineering-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.template.yml  main.py  pyproject.toml
src/raw_extraction/: pipeline_config.yaml  pipeline_engine.py  run_job.py
src/raw_extraction/queries/: late_return_prediction-v1.sql  late_return_prediction.sql
